--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --mode development",
     "start": "webpack-dev-server --open",
-    "eslint": "eslint src/**/*.js src/**/*.jsx",
+    "eslint": "eslint src/**/*.jsx",
     "test": "npm run eslint"
   },
   "devDependencies": {
@@ -25,5 +25,10 @@
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "prop-types": "15.7.2",
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   }
 }
